# XYZnetwork_lib

./: .gitignore  DEMO.ipynb  LICENSE.md  LICENSE.txt  __init__.py  conf.py  demo.py  index.rst  pyproject.toml  requirements.txt  setup.py  ssl_model.pth
CharVis/: DYWECharVis.py  DefaultCharVis.py  DynamicCharVis.py  SDWCharVis.py  SPDYCharVis.py  SPWECharVis.py  SpatialCharVis.py  TransportNetwork.py  WeightedCharVis.py  assortativity.py  centrality.py  defaultGraph.py  degree.py  distance.py  page_rank.py  path.py
GNN/: __init__.py  data.py  loss.py  model.py  run.py  ssl_model.pth  test.ipynb  test.py  test2.py  utils.py
M0_Preprcessing/: NOTE.txt  Network_Class.py  Preprocessing.py  preprocessing_trainnetwork.ipynb  test.html  test.ipynb
M0_Preprcessing/.ipynb_checkpoints/: test-checkpoint.ipynb  (+1 more)
M2_Characterisation/: Preprocessing1.py  notebook-metrics-Copy1.ipynb  notebook-metrics.ipynb  test_v2_finalFINAL.ipynb
ML/: __init__.py  embedding.py  test.py
characterisation/: DefaultCharVis.py  __init__.py  assortativity.py  centrality.py  clustering.py  degree.py  distance.py  page_rank.py  path.py
classes/: __init__.py  test.ipynb  test.py  transportnetwork.py
clustering/: __init__.py  cluster.py
data/: .~Railway Data_JL.xlsx  ~$Railway Data_JL.xlsx
networkviz/: visualisation.py
preprocessing/: Preprocessing.py  __init__.py
robustness_analysis/: __init__.py  robustness.py
source/: conf.py  index.rst
visualisation/: __init__.py  test.py  utils.py  visualisation.py
xyznetwork/: ssl_model.pth
xyznetwork_lib/: Makefile  __init__.py
(+146 files in other folders)
